--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -111,8 +111,7 @@ input {
     flex-grow: 1;
     margin-right: 10px;
 }
-
-button {
+.sending-btn {
     margin-top: 10px;
     padding: 10px 20px;
     font-size: 16px;
@@ -186,4 +185,31 @@ li strong {
     0% { transform: translate(-50%, -50%) rotate(0deg); }
     100% { transform: translate(-50%, -50%) rotate(360deg); }
   }  
-  
+
+.recording-btn {
+  width: 50px;
+  height: 45px;
+  border-radius: 50%;
+  border: none;
+  outline: none;
+  font-size: 10px;
+  font-weight: bold;
+  cursor: pointer;
+  margin: 10px 0px 0px 10px;
+  transition: background-color 0.3s ease;
+}
+
+.recording-btn:disabled {
+  background-color: #ddd;
+  cursor: not-allowed;
+}
+
+.recording-btn:not(.recording) {
+  background-color: #4caf50; 
+  color: #fff;
+}
+
+.recording-btn.recording {
+  background-color: #2196f3; 
+  color: #fff;
+}
