--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -187,7 +187,7 @@ li strong {
   }  
 
 .recording-btn {
-  width: 50px;
+  min-width: 45px;
   height: 45px;
   border-radius: 50%;
   border: none;
