--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -14,6 +14,32 @@ body {
     max-height: 450px;
     overflow-y: auto;
 }
+
+.chat-container {
+  height: 600px; /* default height */
+}
+
+@media screen and (max-width: 750px) {
+  .chat-container {
+      height: 450px;
+  }
+}
+@media screen and (max-width: 850px) {
+  .chat-container {
+      height: 500px;
+  }
+}
+@media screen and (max-width:900px) {
+  .chat-container {
+      height: 550px;
+  }
+}
+@media screen and (max-width:1000px) {
+  .chat-container {
+      height: 600px;
+  }
+}
+
 .sidebar {
     width: 300px; /* 侧边栏宽度 */
     height: 100%; /* 充满整个高度 */
