--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -248,13 +248,14 @@ audio{
   position: fixed;
   bottom: 20px;
   left: 20px;
-  background-color: #ffffff;
+  background-color: #f0f0f0; /* 浅灰色背景 */
   border: 1px solid #cccccc;
   padding: 10px;
-  width: 250px; /* 固定宽度 */
-  height: 400px; /* 固定高度 */
+  width: 250px;
+  height: 400px;
   font-size: 0.9rem;
   overflow: auto;
+  border-radius: 10px; /* 圆角边框 */
 }
 
 .random-questions button {
@@ -264,6 +265,7 @@ audio{
   padding: 8px 16px;
   cursor: pointer;
   font-size: 0.9rem;
+  border-radius: 5px; /* 按钮圆角 */
 }
 
 .random-questions button:hover {
@@ -289,50 +291,47 @@ audio{
   background-color: #f0f0f0;
 }
 
-/* 容器样式 */
 .comment-section {
-  position: absolute; /* 绝对定位，让容器可以放置在页面的特定位置 */
-  top: 20px;          /* 距离页面顶部10像素 */
-  left: 20px;         /* 距离页面左边10像素 */
-  background-color: #ffffff; /* 浅灰色背景 */
-  border: 1px solid #cccccc; /* 边框 */
-  padding: 10px;      /* 内边距 */
-  width: 250px; /* 固定宽度 */
-  height: 350px; /* 固定高度 */
+  position: absolute;
+  top: 20px;
+  left: 20px;
+  background-color: #f0f0f0; /* 浅灰色背景 */
+  border: 1px solid #cccccc;
+  padding: 10px;
+  width: 250px;
+  height: 350px;
   font-size: 0.9rem;
   overflow: auto;
+  border-radius: 10px; /* 圆角边框 */
 }
 
-/* 标题样式 */
 .comment-section h1 {
-  font-size: 18px;    /* 字体大小 */
-  color: #333;        /* 字体颜色 */
-  margin-bottom: 10px; /* 下边距 */
+  font-size: 18px;
+  color: #333;
+  margin-bottom: 10px;
 }
 
-/* 文本域样式 */
 .comment-section textarea {
-  width: 100%;        /* 宽度占满容器 */
-  height: 100px;      /* 高度 */
-  padding: 8px;       /* 内边距 */
-  font-size: 14px;    /* 字体大小 */
-  border: 1px solid #ccc; /* 边框 */
-  box-sizing: border-box; /* 盒模型 */
+  width: 100%;
+  height: 100px;
+  padding: 8px;
+  font-size: 14px;
+  border: 1px solid #ccc;
+  box-sizing: border-box;
 }
 
-/* 按钮样式 */
 .comment-section button {
-  background-color: #4caf50; /* 蓝色背景 */
-  color: white;      /* 白色文字 */
-  border: none;      /* 无边框 */
-  padding: 10px 20px; /* 内边距 */
-  font-size: 14px;   /* 字体大小 */
-  cursor: pointer;   /* 鼠标样式 */
-  margin-top: 10px;  /* 上边距 */
-  transition: background-color 0.3s; /* 背景色变化动画 */
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 14px;
+  cursor: pointer;
+  margin-top: 10px;
+  transition: background-color 0.3s;
+  border-radius: 5px; /* 按钮圆角 */
 }
 
-/* 按钮鼠标悬停效果 */
 .comment-section button:hover {
-  background-color: #2296c4; /* 深蓝色 */
+  background-color: #2296c4;
 }
